<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ViewPoster" >

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#D21F1B"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/delete_live"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/modify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/delete_btn"
            android:layout_alignTop="@+id/delete_btn"
            android:layout_toLeftOf="@+id/delete_btn"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:text="@string/modify" />

        <TextView
            android:id="@+id/concert_name_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delete_btn"
            android:text="@string/concert_name" />

        <TextView
            android:id="@+id/concert_obtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/concert_name_poster"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/band_name_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/concert_name_poster"
            android:text="@string/band_name" />

        <TextView
            android:id="@+id/band_obtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/concert_obtained" />

        <TextView
            android:id="@+id/place_name_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/band_name_poster"
            android:text="@string/place_name_tv" />

        <TextView
            android:id="@+id/place_obtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/band_obtained" />

        <TextView
            android:id="@+id/date_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/place_name_poster"
            android:text="@string/date_tv" />

        <TextView
            android:id="@+id/date_obtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/place_obtained" />

        <TextView
            android:id="@+id/notes_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_poster"
            android:text="@string/notes_tv" />

        <TextView
            android:id="@+id/notes_obtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/date_obtained" />

        <Button
            android:id="@+id/uri_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notes_obtained"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/uri_btn" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notes_obtained"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>