<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <Button
            android:id="@+id/my_lives_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/my_lives_btn" />

        <Button
            android:id="@+id/my_gallery_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_lives_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/my_gallery_btn" />

        <Button
            android:id="@+id/my_texts_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_gallery_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/my_texts_btn" />

        <Button
            android:id="@+id/my_beats_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_texts_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/my_beats_btn" />
    </RelativeLayout>

</ScrollView>