<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_takelive"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TakeLivePhotos" >

    <TextView
        android:id="@+id/takephotos_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="" />

    <Button
        android:id="@+id/import_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takephotos_welcome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/import_photo" />

    <Button
        android:id="@+id/take_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/import_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/take_photo" />

    <TextView
        android:id="@+id/added_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takephotos_welcome"
        android:layout_centerHorizontal="true"
        android:text="@string/added_success"
        android:textAlignment="center"
        android:visibility="invisible" />

    <Button
        android:id="@+id/take_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/added_success"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/take_another_photo"
        android:visibility="invisible" />

</RelativeLayout>